Fixed z-index issue

--- a/2025/heatmap/style.css
+++ b/2025/heatmap/style.css
@@ -37,7 +37,7 @@
     transform:scale(0);
     opacity:0;
     transition:all 0.2s ease-in-out;
-    z-index:10;
+    z-index:1000000000;
 }
 .inp button{
     width:100%;
@@ -133,8 +133,7 @@ button.focusBtn{
     background:#ddd !important;
 }
 .currentDate{
-    outline:0.5px solid rgb(14, 168, 14);
-    border-radius:0px !important;
+    border:1.5px solid gray;
 }
 .ord{
     display:grid;  
